5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4476/executions/1800_2567.log
== TEST (2019-06-11 11:04:18) 
-- CODE:
n = int(input("digite o numero: "))

for i in range(n):
	print((i+1)*"*")
-- OUTPUT:
*
**
***
****
*****
******
*******
********
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:04:46) 
-- CODE:
n = int(input("digite o numero: "))

for i in range(n):
	print((i-1)*"*")
	print((i+1)*"*")
-- OUTPUT:
*

**
*
***
**
****
***
*****
****
******
*****
*******
******
********
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:05:13) 
-- CODE:
n = int(input("digite o numero: "))

for i in range(n):
	print((i-1)*"*")

-- OUTPUT:
*
**
***
****
*****
******
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:05:50) 
-- CODE:
n = int(input("digite o numero: "))

for i in range(n):
	print((i-2)*"*")

-- OUTPUT:
*
**
***
****
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:05:56) 
-- CODE:
n = int(input("digite o numero: "))

for i in range(n):
	print((i-1)*"*")

-- OUTPUT:
*
**
***
****
*****
******
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:06:17) 
-- CODE:
n = int(input("digite o numero: "))

for i in range(n):
	print((i+1)*"*")

-- OUTPUT:
*
**
***
****
*****
******
*******
********
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:08:25) 
-- CODE:
n = int(input("digite o numero: "))

for i in range(n):
	print((i+1)*"*") + (n - i)*"*"

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print((i+1)*"*") + (n - i)*"*"
TypeError: unsupported operand type(s) for +: 'NoneType' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:09:05) 
-- CODE:
n = int(input("digite o numero: "))

for i in range(n):
	print((i+1)*"*")

-- OUTPUT:
*
**
***
****
*****
******
*******
********
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:10:08) 
-- CODE:
n = int(input("digite o numero: "))

for i in range(n):
	print((n - i)*"*" + (i+1)*"*")

-- OUTPUT:
*********
*********
*********
*********
*********
*********
*********
*********
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:10:16) 
-- CODE:
n = int(input("digite o numero: "))

for i in range(n):
	print((n - i)*"*" + (i+1)*"*")

-- OUTPUT:
*********
*********
*********
*********
*********
*********
*********
*********
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:10:29) 
-- CODE:
n = int(input("digite o numero: "))

for i in range(n):
	print((n - i)*"*"

-- ERROR:
File "XXXX", line 5
    
                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:10:33) 
-- CODE:
n = int(input("digite o numero: "))

for i in range(n):
	print((n - i)*"*"

-- ERROR:
File "XXXX", line 5
    
                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:10:37) 
-- CODE:
n = int(input("digite o numero: "))

for i in range(n):
	print((n - i)*"*")

-- OUTPUT:
********
*******
******
*****
****
***
**
*
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:11:00) 
-- CODE:
n = int(input("digite o numero: "))

for i in range(n):
	print((n - i)*"*")
	print((i+1)*"*")

-- OUTPUT:
********
*
*******
**
******
***
*****
****
****
*****
***
******
**
*******
*
********
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:11:06) 
-- CODE:
n = int(input("digite o numero: "))

for i in range(n):
	print((n - i)*"*")
	print((i+1)*"*")

-- OUTPUT:
********
*
*******
**
******
***
*****
****
****
*****
***
******
**
*******
*
********
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:11:24) 
-- CODE:
n = int(input("digite o numero: "))

for i in range(n):
	print((n - i)*"*")
for i in range(n):
	print((i+1)*"*")

-- OUTPUT:
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 11:11:33) 
-- CODE:
n = int(input("digite o numero: "))

for i in range(n):
	print((n - i)*"*")
for i in range(n):
	print((i+1)*"*")

-- EXECUTION TIME:
0.697051
-- TEST CASE 1:
---- input:
8
---- correct output:
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********

---- user output:
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
-- TEST CASE 2:
---- input:
11
---- correct output:
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********

---- user output:
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********
-- TEST CASE 3:
---- input:
25
---- correct output:
*************************
************************
***********************
**********************
*********************
********************
*******************
******************
*****************
****************
***************
**************
*************
************
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********
************
*************
**************
***************
****************
*****************
******************
*******************
********************
*********************
**********************
***********************
************************
*************************

---- user output:
*************************
************************
***********************
**********************
*********************
********************
*******************
******************
*****************
****************
***************
**************
*************
************
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********
************
*************
**************
***************
****************
*****************
******************
*******************
********************
*********************
**********************
***********************
************************
*************************
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
